pascal/quickjs.pas


// Object operations
function JS_GetProperty(ctx: PJSContext; this_obj: JSValueConst; prop: JSAtom): JSValue; cdecl; external libqjs;
function JS_GetPropertyStr(ctx: PJSContext; this_obj: JSValueConst; prop: PChar): JSValue; cdecl; external libqjs;
function JS_GetPropertyUint32(ctx: PJSContext; this_obj: JSValueConst; idx: cuint32): JSValue; cdecl; external libqjs;
function JS_SetProperty(ctx: PJSContext; this_obj: JSValueConst; prop: JSAtom; val: JSValueConst): cint; cdecl; external libqjs;
function JS_SetPropertyStr(ctx: PJSContext; this_obj: JSValueConst; prop: PChar; val: JSValueConst): cint; cdecl; external libqjs;
function JS_SetPropertyUint32(ctx: PJSContext; this_obj: JSValueConst; idx: cuint32; val: JSValueConst): cint; cdecl; external libqjs;
function JS_DefineProperty(ctx: PJSContext; this_obj: JSValueConst; prop: JSAtom; val: JSValueConst; getter: JSValueConst; setter: JSValueConst; flags: cint): cint; cdecl; external libqjs;
function JS_DefinePropertyValue(ctx: PJSContext; this_obj: JSValueConst; prop: JSAtom; val: JSValueConst; flags: cint): cint; cdecl; external libqjs;
function JS_DefinePropertyValueStr(ctx: PJSContext; this_obj: JSValueConst; prop: PChar; val: JSValueConst; flags: cint): cint; cdecl; external libqjs;
function JS_DefinePropertyValueUint32(ctx: PJSContext; this_obj: JSValueConst; idx: cuint32; val: JSValueConst; flags: cint): cint; cdecl; external libqjs;
function JS_DeleteProperty(ctx: PJSContext; obj: JSValueConst; prop: JSAtom; flags: cint): cint; cdecl; external libqjs;
function JS_DeletePropertyStr(ctx: PJSContext; obj: JSValueConst; prop: PChar; flags: cint): cint; cdecl; external libqjs;
function JS_DeletePropertyUint32(ctx: PJSContext; obj: JSValueConst; idx: cuint32; flags: cint): cint; cdecl; external libqjs;
function JS_HasProperty(ctx: PJSContext; obj: JSValueConst; prop: JSAtom): cint; cdecl; external libqjs;
function JS_HasPropertyStr(ctx: PJSContext; obj: JSValueConst; prop: PChar): cint; cdecl; external libqjs;
function JS_HasPropertyUint32(ctx: PJSContext; obj: JSValueConst; idx: cuint32): cint; cdecl; external libqjs;
function JS_GetOwnPropertyNames(ctx: PJSContext; ptab: PPJSPropertyEnum; plen: Pcuint32; obj: JSValueConst; flags: cint): cint; cdecl; external libqjs;
function JS_GetOwnProperty(ctx: PJSContext; desc: pointer; obj: JSValueConst; prop: JSAtom): cint; cdecl; external libqjs;

// Array operations
function JS_GetLength(ctx: PJSContext; obj: JSValueConst): cint; cdecl; external libqjs;
function JS_SetLength(ctx: PJSContext; obj: JSValueConst; len: cuint32): cint; cdecl; external libqjs;

// ArrayBuffer operations
function JS_NewArrayBuffer(ctx: PJSContext; buf: Pcuint8; len: csize_t; free_func: JSFreeArrayBufferDataFunc; opaque: pointer; is_shared: cint): JSValue; cdecl; external libqjs;
function JS_NewArrayBufferCopy(ctx: PJSContext; buf: Pcuint8; len: csize_t): JSValue; cdecl; external libqjs;
function JS_GetArrayBuffer(ctx: PJSContext; psize: Pcsize_t; obj: JSValueConst): Pcuint8; cdecl; external libqjs;
function JS_IsArrayBuffer(obj: JSValueConst): cint; cdecl; external libqjs;
procedure JS_DetachArrayBuffer(ctx: PJSContext; obj: JSValueConst); cdecl; external libqjs;

// TypedArray operations
function JS_GetUint8Array(ctx: PJSContext; psize: Pcsize_t; obj: JSValueConst): Pcuint8; cdecl; external libqjs;
function JS_GetTypedArrayBuffer(ctx: PJSContext; obj: JSValueConst; pbyte_offset: Pcsize_t; pbyte_length: Pcsize_t; pbytes_per_element: Pcsize_t): JSValue; cdecl; external libqjs;

// Function operations
function JS_Call(ctx: PJSContext; func_obj: JSValueConst; this_obj: JSValueConst; argc: cint; argv: PJSValueConst): JSValue; cdecl; external libqjs;
function JS_Invoke(ctx: PJSContext; this_val: JSValueConst; atom: JSAtom; argc: cint; argv: PJSValueConst): JSValue; cdecl; external libqjs;
function JS_CallConstructor(ctx: PJSContext; func_obj: JSValueConst; argc: cint; argv: PJSValueConst): JSValue; cdecl; external libqjs;
function JS_CallConstructor2(ctx: PJSContext; func_obj: JSValueConst; new_target: JSValueConst; argc: cint; argv: PJSValueConst): JSValue; cdecl; external libqjs;
function JS_DetectModule(const input: PChar; input_len: csize_t): cint; cdecl; external libqjs;

// Eval
function JS_Eval(ctx: PJSContext; input: PChar; input_len: csize_t; filename: PChar; eval_flags: cint): JSValue; cdecl; external libqjs;
function JS_EvalFunction(ctx: PJSContext; func_obj: JSValueConst): JSValue; cdecl; external libqjs;

// Exception handling
function JS_GetException(ctx: PJSContext): JSValue; cdecl; external libqjs;
function JS_IsError(ctx: PJSContext; val: JSValueConst): cint; cdecl; external libqjs;
procedure JS_ResetUncatchableException(ctx: PJSContext); cdecl; external libqjs;

// Atom operations
function JS_NewAtom(ctx: PJSContext; str: PChar): JSAtom; cdecl; external libqjs;
function JS_NewAtomLen(ctx: PJSContext; str: PChar; len: csize_t): JSAtom; cdecl; external libqjs;
function JS_NewAtomUInt32(ctx: PJSContext; n: cuint32): JSAtom; cdecl; external libqjs;
function JS_DupAtom(ctx: PJSContext; v: JSAtom): JSAtom; cdecl; external libqjs;
procedure JS_FreeAtom(ctx: PJSContext; v: JSAtom); cdecl; external libqjs;
procedure JS_FreeAtomRT(rt: PJSRuntime; v: JSAtom); cdecl; external libqjs;
function JS_AtomToValue(ctx: PJSContext; atom: JSAtom): JSValue; cdecl; external libqjs;
function JS_AtomToCString(ctx: PJSContext; atom: JSAtom): PChar; cdecl; external libqjs;

// Class operations
function JS_NewClassID(pclass_id: PJSClassID): JSClassID; cdecl; external libqjs;
function JS_NewClass(rt: PJSRuntime; class_id: JSClassID; class_def: PJSClass): cint; cdecl; external libqjs;
function JS_IsInstanceOf(ctx: PJSContext; obj: JSValueConst; class_id: JSClassID): cint; cdecl; external libqjs;
function JS_GetClassID(obj: JSValueConst; pclass_id: PJSClassID): cint; cdecl; external libqjs;
function JS_GetOpaque(obj: JSValueConst; class_id: JSClassID): pointer; cdecl; external libqjs;
function JS_GetOpaque2(ctx: PJSContext; obj: JSValueConst; class_id: JSClassID): pointer; cdecl; external libqjs;
function JS_SetOpaque(obj: JSValue; opaque: pointer): cint; cdecl; external libqjs;
function JS_GetClassProto(ctx: PJSContext; class_id: JSClassID): JSValue; cdecl; external libqjs;
function JS_SetClassProto(ctx: PJSContext; class_id: JSClassID; obj: JSValueConst): cint; cdecl; external libqjs;

// C function registration
// Chỉ JS_NewCFunction2 được export từ DLL; JS_NewCFunction là inline trong quickjs.h,
// nên ta tự wrap lại bằng Pascal.
function JS_NewCFunction(ctx: PJSContext; func: JSCFunction; name: PChar; length: cint): JSValue; cdecl;
function JS_NewCFunction2(ctx: PJSContext; func: JSCFunction; name: PChar; length: cint; cproto: cint; magic: cint): JSValue; cdecl; external libqjs;
function JS_NewCFunctionData(ctx: PJSContext; func: JSCFunctionData; length: cint; magic: cint; data_len: cint; data: PJSValue): JSValue; cdecl; external libqjs;
function JS_SetConstructor(ctx: PJSContext; func_obj: JSValueConst; proto: JSValueConst): cint; cdecl; external libqjs;
function JS_SetConstructorBit(ctx: PJSContext; func_obj: JSValueConst; val: cint): cint; cdecl; external libqjs;

// Module operations
function JS_NewCModule(ctx: PJSContext; name_str: PChar; func: JSModuleInitFunc): PJSModuleDef; cdecl; external libqjs;
function JS_AddModuleExport(ctx: PJSContext; m: PJSModuleDef; name_str: PChar): cint; cdecl; external libqjs;
function JS_AddModuleExportList(ctx: PJSContext; m: PJSModuleDef; tab: pointer; len: cint): cint; cdecl; external libqjs;
function JS_SetModuleLoaderFunc(rt: PJSRuntime; module_normalize: JSModuleNormalizeFunc; module_loader: JSModuleLoaderFunc; opaque: pointer): cint; cdecl; external libqjs;
function JS_GetImportMeta(ctx: PJSContext; m: PJSModuleDef): JSValue; cdecl; external libqjs;
function JS_GetModuleName(ctx: PJSContext; m: PJSModuleDef): JSValue; cdecl; external libqjs;

// Bytecode operations
function JS_ReadObject(ctx: PJSContext; buf: Pcuint8; buf_len: csize_t; flags: cint): JSValue; cdecl; external libqjs;
function JS_WriteObject(ctx: PJSContext; psize: Pcsize_t; obj: JSValueConst; flags: cint): Pcuint8; cdecl; external libqjs;

// Runtime configuration / Promise helpers
procedure JS_SetMaxStackSize(rt: PJSRuntime; stack_size: csize_t); cdecl; external libqjs;
procedure JS_SetMemoryLimit(rt: PJSRuntime; limit: csize_t); cdecl; external libqjs;
procedure JS_SetGCThreshold(rt: PJSRuntime; gc_threshold: csize_t); cdecl; external libqjs;
function JS_NewRuntime2(opaque_class: PJSClass; opaque: pointer): PJSRuntime; cdecl; external libqjs;
procedure JS_RunGC(rt: PJSRuntime); cdecl; external libqjs;
function JS_IsLiveObject(rt: PJSRuntime; obj: JSValueConst): cint; cdecl; external libqjs;
procedure JS_SetInterruptHandler(rt: PJSRuntime; interrupt_handler: JSInterruptHandler; opaque: pointer); cdecl; external libqjs;
procedure JS_UpdateStackTop(rt: PJSRuntime); cdecl; external libqjs;
function JS_ExecutePendingJob(rt: PJSRuntime; pctx: PPJSContext): cint; cdecl; external libqjs;

// Promise helpers
type
  JSPromiseStateEnum = (
    JS_PROMISE_NOT_A_PROMISE = -1,
    JS_PROMISE_PENDING       = 0,
    JS_PROMISE_FULFILLED,
    JS_PROMISE_REJECTED
  );

function JS_PromiseState(ctx: PJSContext; promise: JSValueConst): JSPromiseStateEnum; cdecl; external libqjs;
function JS_PromiseResult(ctx: PJSContext; promise: JSValueConst): JSValue; cdecl; external libqjs;
function JS_IsPromise(val: JSValueConst): cint; cdecl; external libqjs;

// String operations
function JS_ToString(ctx: PJSContext; val: JSValueConst): JSValue; cdecl; external libqjs;
function JS_ToPropertyKey(ctx: PJSContext; val: JSValueConst): JSValue; cdecl; external libqjs;
function JS_ParseJSON(ctx: PJSContext; buf: PChar; buf_len: csize_t; filename: PChar): JSValue; cdecl; external libqjs;
function JS_JSONStringify(ctx: PJSContext; obj: JSValueConst; replacer: JSValueConst; space0: JSValueConst): JSValue; cdecl; external libqjs;

// Global object
function JS_GetGlobalObject(ctx: PJSContext): JSValue; cdecl; external libqjs;

// Version
function JS_GetVersion: PChar; cdecl; external libqjs;

// Memory management
procedure js_free(ctx: PJSContext; ptr: pointer); cdecl; external libqjs;
procedure js_free_rt(rt: PJSRuntime; ptr: pointer); cdecl; external libqjs;

// Compression functions (miniz)
type
  mz_ulong = cuint32;
  Pmz_ulong = ^mz_ulong;
  mz_streamp = pointer;  // Opaque pointer for stream API

const
  MZ_OK = 0;
  MZ_STREAM_END = 1;
  MZ_NEED_DICT = 2;
  MZ_ERRNO = -1;
  MZ_STREAM_ERROR = -2;
  MZ_DATA_ERROR = -3;
  MZ_MEM_ERROR = -4;
  MZ_BUF_ERROR = -5;
  MZ_VERSION_ERROR = -6;
  MZ_DEFAULT_LEVEL = 6;
  MZ_DEFAULT_WINDOW_BITS = 15;
  MZ_DEFLATED = 8;

// Simple compression API
function mz_compress(pDest: Pcuint8; pDest_len: Pmz_ulong; pSource: Pcuint8; source_len: mz_ulong): cint; cdecl; external libqjs;
function mz_compress2(pDest: Pcuint8; pDest_len: Pmz_ulong; pSource: Pcuint8; source_len: mz_ulong; level: cint): cint; cdecl; external libqjs;
function mz_compressBound(source_len: mz_ulong): mz_ulong; cdecl; external libqjs;
function mz_uncompress(pDest: Pcuint8; pDest_len: Pmz_ulong; pSource: Pcuint8; source_len: mz_ulong): cint; cdecl; external libqjs;
function mz_uncompress2(pDest: Pcuint8; pDest_len: Pmz_ulong; pSource: Pcuint8; pSource_len: Pmz_ulong): cint; cdecl; external libqjs;

// Error throwing functions
function JS_ThrowTypeError(ctx: PJSContext; fmt: PChar): JSValue; cdecl; external libqjs;
function JS_ThrowReferenceError(ctx: PJSContext; fmt: PChar): JSValue; cdecl; external libqjs;
function JS_ThrowPlainError(ctx: PJSContext; fmt: PChar): JSValue; cdecl; external libqjs;

implementation

// ======== Helper functions for JSValue (non-NAN_BOXING, like quickjs.h) ========

function JS_VALUE_GET_TAG(const v: JSValueConst): cint; inline;
begin
  Result := cint(v.tag);
end;
